--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                         <input type="checkbox" class="check">
                         <label>Seleccionar como principal</label>
                     </div>
-                    <div class="modal_img col-2">
-                        <img src="img/img1.jpg" alt="img">
+                    <div class="modal-img col-2">
+                        <img src="img1.jpg" alt="img">//para poner la imagen
                     </div>
                     <button type="button" id="subir_img" class="btn boton-luz1">subir imagen</button>
                 </div>
